# cockpit-tools

./: .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  announcements.json  package.json
.github/workflows/: release.yml
Casks/: cockpit-tools.rb
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: codebuddy_cn_instance.rs  codebuddy_instance.rs  codex.rs  codex_instance.rs  cursor_instance.rs  gemini_instance.rs  github_copilot_instance.rs  instance.rs  kiro_instance.rs  qoder_instance.rs  system.rs  trae_instance.rs  wakeup.rs  windsurf.rs  windsurf_instance.rs  workbuddy_instance.rs
src-tauri/src/models/: instance.rs
src-tauri/src/modules/: codebuddy_cn_instance.rs  codebuddy_instance.rs  codex_instance.rs  codex_wakeup.rs  codex_wakeup_scheduler.rs  config.rs  cursor_instance.rs  gemini_instance.rs  github_copilot_instance.rs  instance.rs  instance_store.rs  kiro_account.rs  kiro_instance.rs  macos_native_menu.rs  process.rs  qoder_instance.rs  qoder_oauth.rs  trae_account.rs  trae_instance.rs  tray.rs  vscode_inject.rs  wakeup.rs  wakeup_gateway.rs  wakeup_scheduler.rs  wakeup_verification.rs  web_report.rs  windsurf_account.rs  windsurf_instance.rs  windsurf_oauth.rs  workbuddy_instance.rs
src/components/: AnnouncementCenter.tsx  CodexAccountGroupModal.tsx  CodexGroupAccountPickerModal.tsx  GroupAccountPickerModal.tsx  InstancesManager.tsx  ManualHelpIconButton.tsx  OverviewTabsHeader.tsx  QuickSettingsPopover.tsx
src/hooks/: useAutoRefresh.ts  usePlatformRuntimeSupport.ts
src/locales/: ar.json  cs.json  de.json  en-US.json  en.json  es.json  fr.json  id.json  it.json  ja.json  ko.json  pl.json  pt-br.json  ru.json  tr.json  vi.json  zh-CN.json  zh-tw.json
src/pages/: AccountsPage.tsx  CodexAccountsPage.tsx  DashboardPage.css  DashboardPage.tsx  FloatingCardWindow.css  FloatingCardWindow.tsx  GeminiAccountsPage.tsx  GeminiInstancesPage.tsx  SettingsPage.tsx  WakeupTasksPage.tsx  WindsurfAccountsPage.tsx
src/presentation/: platformAccountPresentation.ts
src/services/: codexService.ts  codexWakeupService.ts  tokenPricing.ts  windsurfService.ts
src/stores/: createInstanceStore.ts  (+4 more)
(+12 files in other folders)
